# OpenMirroringFaker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
docs/decisions/: README.md
scenarios/: hr.yaml  retail.yaml
src/open_mirroring_faker/: cli.py  config.py  data_generator.py  onelake_writer.py  parquet_builder.py
src/open_mirroring_faker/scenarios/: __init__.py  hr.py  retail.py
tests/: test_data_generator.py  test_onelake_writer.py  test_parquet_builder.py
